[package]
name = "busses"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
read_input = "0.8.6"
relativetime = "0.1.4"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
